--- a/.github/workflows/rollback.yml
+++ b/.github/workflows/rollback.yml
@@ -31,11 +31,13 @@ jobs:
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
 
-      - name: Revert Changes Since Last Good Commit
+      - name: Create Rollback Commit Without Workflow Files
         run: |
-          git revert --no-commit ${{ env.last_good_commit }}..HEAD
-          git commit -m "Reverted to last successful commit due to failure."
+          git checkout ${{ env.last_good_commit }} -- . ':!**/.github/workflows/*'
+          git checkout -b temp-rollback-branch
+          git commit -m "Rollback to commit ${{ env.last_good_commit }} excluding workflow files"
+          git push origin temp-rollback-branch:development --force
 
-      - name: Force Push Changes
+      - name: Clean up Temporary Branch
         run: |
-          git push --force
+          git branch -D temp-rollback-branch
