--- a/pom.xml
+++ b/pom.xml
@@ -276,68 +276,68 @@
                 </executions>
             </plugin>
 
-            <!-- Exec-plugin for easy java executable compilation -->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>3.1.0</version>
-                <executions>
-                    <execution>
-                        <id>windows-executable</id>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>cmd</executable>
-                            <arguments>
-                                <argument>/c</argument>
-                                <argument>echo Building Windows Executable</argument>
-                                <argument>&amp;&amp;</argument>
-                                <argument>mkdir</argument>
-                                <argument>target\windows</argument>
-                                <argument>&amp;&amp;</argument>
-                                <argument>copy</argument>
-                                <argument>target\${project.build.finalName}.jar</argument>
-                                <argument>target\windows\${project.build.finalName}.exe</argument>
-                            </arguments>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>linux-executable</id>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>sh</executable>
-                            <arguments>
-                                <argument>-c</argument>
-                                <argument>echo Building Linux Executable</argument>
-                                <argument>&amp;&amp;</argument>
-                                <argument>mkdir -p target/linux</argument>
-                                <argument>&amp;&amp;</argument>
-                                <argument>cp target/${project.build.finalName}.jar target/linux/${project.build.finalName}.sh</argument>
-                            </arguments>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>mac-executable</id>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>sh</executable>
-                            <arguments>
-                                <argument>-c</argument>
-                                <argument>echo Building Mac Executable</argument>
-                                <argument>&amp;&amp;</argument>
-                                <argument>mkdir -p target/mac</argument>
-                                <argument>&amp;&amp;</argument>
-                                <argument>cp target/${project.build.finalName}.jar target/mac/${project.build.finalName}.app</argument>
-                            </arguments>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+            <!-- Exec-plugin for easy java executable compilation @ local -->
+<!--            <plugin>-->
+<!--                <groupId>org.codehaus.mojo</groupId>-->
+<!--                <artifactId>exec-maven-plugin</artifactId>-->
+<!--                <version>3.1.0</version>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>windows-executable</id>-->
+<!--                        <goals>-->
+<!--                            <goal>exec</goal>-->
+<!--                        </goals>-->
+<!--                        <configuration>-->
+<!--                            <executable>cmd</executable>-->
+<!--                            <arguments>-->
+<!--                                <argument>/c</argument>-->
+<!--                                <argument>echo Building Windows Executable</argument>-->
+<!--                                <argument>&amp;&amp;</argument>-->
+<!--                                <argument>mkdir</argument>-->
+<!--                                <argument>target\windows</argument>-->
+<!--                                <argument>&amp;&amp;</argument>-->
+<!--                                <argument>copy</argument>-->
+<!--                                <argument>target\${project.build.finalName}.jar</argument>-->
+<!--                                <argument>target\windows\${project.build.finalName}.exe</argument>-->
+<!--                            </arguments>-->
+<!--                        </configuration>-->
+<!--                    </execution>-->
+<!--                    <execution>-->
+<!--                        <id>linux-executable</id>-->
+<!--                        <goals>-->
+<!--                            <goal>exec</goal>-->
+<!--                        </goals>-->
+<!--                        <configuration>-->
+<!--                            <executable>sh</executable>-->
+<!--                            <arguments>-->
+<!--                                <argument>-c</argument>-->
+<!--                                <argument>echo Building Linux Executable</argument>-->
+<!--                                <argument>&amp;&amp;</argument>-->
+<!--                                <argument>mkdir -p target/linux</argument>-->
+<!--                                <argument>&amp;&amp;</argument>-->
+<!--                                <argument>cp target/${project.build.finalName}.jar target/linux/${project.build.finalName}.sh</argument>-->
+<!--                            </arguments>-->
+<!--                        </configuration>-->
+<!--                    </execution>-->
+<!--                    <execution>-->
+<!--                        <id>mac-executable</id>-->
+<!--                        <goals>-->
+<!--                            <goal>exec</goal>-->
+<!--                        </goals>-->
+<!--                        <configuration>-->
+<!--                            <executable>sh</executable>-->
+<!--                            <arguments>-->
+<!--                                <argument>-c</argument>-->
+<!--                                <argument>echo Building Mac Executable</argument>-->
+<!--                                <argument>&amp;&amp;</argument>-->
+<!--                                <argument>mkdir -p target/mac</argument>-->
+<!--                                <argument>&amp;&amp;</argument>-->
+<!--                                <argument>cp target/${project.build.finalName}.jar target/mac/${project.build.finalName}.app</argument>-->
+<!--                            </arguments>-->
+<!--                        </configuration>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
 
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
